Updated homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/yuli-ana/kombucha-lab.git",
+  "homepage": "https://yuli-ana.github.io/kombucha-lab",
   "name": "kombucha-lab",
   "version": "0.1.0",
   "private": true,
